# AI-Assess

./: Langchain.ipynb  Readme.md  main.py  pyproject.toml  requirements.txt
backend/: main.py  models.py  prompts.py
backend/routers/: tests.py
backend/services/: evaluation_service.py  openai_service.py  pdf_service.py  question_generation_service.py  question_service.py
backend/utils/: pdf_utils.py  question_utils.py  utils.py
frontend/: app.py
