[tool.poetry]
name = "ai-assess"
version = "0.1.0"
description = "AI-powered test generator"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
langchain = "^0.0.331"
pypdf2 = "^3.0.1"
openai = "^0.28.1"
pydantic = "^2.4.2"
python-multipart = "^0.0.6"
requests = "^2.31.0"
fpdf2 = "^2.7.6"
streamlit = "^1.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
